# ChangeLog for app-editors/leafpad
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-editors/leafpad/ChangeLog,v 1.15 2008/03/25 15:02:07 armin76 Exp $

  25 Mar 2008; Raúl Porcel <armin76@gentoo.org> leafpad-0.8.12.ebuild:
  x86 stable

  25 Dec 2007; Christian Heim <phreak@gentoo.org> metadata.xml:
  Removing taviso from metadata.xml as per #202471.

*leafpad-0.8.12 (23 Dec 2007)

  23 Dec 2007; Saleem Abdulrasool <compnerd@gentoo.org>
  +leafpad-0.8.12.ebuild:
  Version bump from upstream

  23 Dec 2007; Saleem Abdulrasool <compnerd@gentoo.org>
  -leafpad-0.7.9.ebuild, -leafpad-0.8.1.ebuild, -leafpad-0.8.3.ebuild:
  Prune unused versions

  23 Dec 2007; Saleem Abdulrasool <compnerd@gentoo.org> metadata.xml:
  Add myself as a maintainer

  21 Oct 2007; Markus Meier <maekke@gentoo.org> leafpad-0.8.7.ebuild:
  x86 stable, bug #164337

  08 Feb 2007; Diego Pettenò <flameeyes@gentoo.org> ChangeLog:
  Regenerate digest in Manifest2 format.

*leafpad-0.8.7 (20 Jan 2006)

  20 Jan 2006; Tavis Ormandy <taviso@gentoo.org> +leafpad-0.8.7.ebuild:
  bump

  24 Oct 2005; Tavis Ormandy <taviso@gentoo.org> leafpad-0.8.3.ebuild:
  stable on x86

*leafpad-0.8.3 (21 Aug 2005)

  21 Aug 2005; Tavis Ormandy <taviso@gentoo.org> +leafpad-0.8.3.ebuild:
  bump, bug 101139

  08 Jul 2005; David Holm <dholm@gentoo.org> leafpad-0.8.1.ebuild:
  Added to ~ppc.

  05 Jun 2005; Tavis Ormandy <taviso@gentoo.org> :
  bump #91506

  21 Apr 2005; Tavis Ormandy <taviso@gentoo.org> leafpad-0.7.9.ebuild:
  0.7.9 stable on x86

  29 Mar 2005; Jan Brinkmann <luckyduck@gentoo.org> leafpad-0.7.9.ebuild:
  added ~amd64 to KEYWORDS, fixes #87018

*leafpad-0.7.9 (25 Jan 2005)

  25 Jan 2005; Tavis Ormandy <taviso@gentoo.org> +metadata.xml,
  +leafpad-0.7.9.ebuild:
  initial import #69515
