@@ -1,6 +1,8 @@
 DIST leafpad-0.8.12.tar.gz 272670 RMD160 7af8884d1ffc1c7a0ef082b34a987cbcda26920a SHA1 4d70e98a3bdb0c6c22cebc6341d915505990d7c0 SHA256 4145d1e11032bdd64435da4520ebd694adb96c737ce11c3e06827c743169d37b
+DIST leafpad-0.8.14.tar.gz 269496 RMD160 62b0c0bc53a9f68ecec77fa87e5989bfd8ef70f5 SHA1 6cd31b2a5730d8537366eecb910a59a888c1e1aa SHA256 be1e4bb3541af042a9b53745ba1aa6929e5e3f2ba740782579cb7c7ddac5a979
 DIST leafpad-0.8.7.tar.gz 246464 RMD160 6bc07f837e528e65546b30d0036cbe1296200e9b SHA1 e405e5cc0e73da71281d5148fe8dd4301dfbd276 SHA256 abbf280b1eb06167f6033610e4c4b4545433e11644aa57fdfdec55e489d393c9
 EBUILD leafpad-0.8.12.ebuild 737 RMD160 897a9023b26afe2837a46393f4990097acb50920 SHA1 a1648152ce72f772979d3f0f35a8438e6383f8fe SHA256 ac94b5e7e288d31aea223e6ebc632505c6cf922855e35808f180cb7aaf60a89e
+EBUILD leafpad-0.8.14.ebuild 739 RMD160 590d6e01966822f446be9fe4257fa8ce27784f51 SHA1 6027a21810c387fa8db1b4d92e1a720506ca1a0b SHA256 64cd1cf9113a03e4cc297694385ef3c5885b2f066207a2f67a7f2cfea11532d7
 EBUILD leafpad-0.8.7.ebuild 636 RMD160 ad01bb97b8c203ff008a5b2714d81ac6d0c767ac SHA1 e666d4a50a1b4a6ebb78903d52b39ba6078c9ac3 SHA256 63639ec198861c55485fc2311d06776be2624764e88dde44c6f2ac0dd8827bba
-MISC ChangeLog 1839 RMD160 22bf0b62326c9bb26b7722998fcea2c255fb6c46 SHA1 9dbadb33abeefae88f0ce721cbc0db3ad4d22e6b SHA256 2e82744e7d0d6366d8576ff81abeba254fa589a63167a4d465b47e4ca9d9e01e
+MISC ChangeLog 1997 RMD160 ae0ddab5e51defe74d27b0c5dd54906bd6684800 SHA1 655523fba5001c4d6e3a5732f2467e424495f2cf SHA256 8985b98924e6d8a8d81d210499f2d00e2937f2406bdac32df654ab8241a43dbd
 MISC metadata.xml 261 RMD160 61d7b8c18c78421e155ce7b8a92db7372db3e4a5 SHA1 05795fc56bf7c043b181a480d6c7064d206b8646 SHA256 15dbcd605fd68259042fa5adf962c5a56fbfef58007254c6d119db1ef3d56529
