@@ -1,6 +1,12 @@
 # ChangeLog for app-editors/leafpad
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-editors/leafpad/ChangeLog,v 1.15 2008/03/25 15:02:07 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-editors/leafpad/ChangeLog,v 1.16 2008/03/29 19:37:16 compnerd Exp $
+
+*leafpad-0.8.14 (29 Mar 2008)
+
+  29 Mar 2008; Saleem Abdulrasool <compnerd@gentoo.org>
+  +leafpad-0.8.14.ebuild:
+  Version bump from upstream (bug #214708)
 
   25 Mar 2008; Raúl Porcel <armin76@gentoo.org> leafpad-0.8.12.ebuild:
   x86 stable
